[gd_scene load_steps=2 format=3 uid="uid://b63mipdhbgvn2"]

[ext_resource type="Script" path="res://src/menu/SettingsScript.gd" id="1_7i3hp"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7i3hp")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 320)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="WhiteRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(596, 316)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 320)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
current_tab = 0

[node name="PlayerInfo" type="MarginContainer" parent="CenterContainer/PanelContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="NameLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="FactionLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Preferred Faction:"

[node name="OptionButton" type="OptionButton" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 5
item_count = 6
popup/item_0/text = "GREY"
popup/item_0/id = 1
popup/item_1/text = "BLUE"
popup/item_1/id = 2
popup/item_2/text = "GREEN"
popup/item_2/id = 3
popup/item_3/text = "RED"
popup/item_3/id = 4
popup/item_4/text = "YELLOW"
popup/item_4/id = 5
popup/item_5/text = "NONE"
popup/item_5/id = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 8

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="RevertButton" type="Button" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revert Changes"

[node name="SaveButton" type="Button" parent="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save Changes"

[node name="Settings" type="MarginContainer" parent="CenterContainer/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/TabContainer/Settings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="MasterVolumeLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Master Volume:"

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="VolumeBox" type="SpinBox" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
value = 100.0
alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 4

[node name="AALabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Anti-Aliasing: "

[node name="AA" type="OptionButton" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "Disabled"
popup/item_1/text = "2x MSAA"
popup/item_1/id = 1
popup/item_2/text = "4x MSAA"
popup/item_2/id = 2
popup/item_3/text = "8x MSAA"
popup/item_3/id = 3

[node name="FPSLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Show FPS: "

[node name="FPS" type="CheckButton" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="windowModeLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Window Mode:"

[node name="WindowMode" type="OptionButton" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="ResolutionLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Screen Resolution:"

[node name="Resolution" type="OptionButton" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
item_count = 8
popup/item_0/text = "1280 x 720"
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "1920 x 1080"
popup/item_2/id = 2
popup/item_3/text = "2560 x 1440"
popup/item_3/id = 3
popup/item_4/text = "3200 x 1800"
popup/item_4/id = 4
popup/item_5/text = "3840 x 2160"
popup/item_5/id = 5
popup/item_6/text = "5120 x 2880"
popup/item_6/id = 6
popup/item_7/text = "7680 x 4320"
popup/item_7/id = 7

[node name="ShadowOnOffLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Shadows:"

[node name="ShadowOnOff" type="CheckButton" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ResolutionScalarLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Resolution Scale:"

[node name="ResolutionScale" type="OptionButton" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = ".5"
popup/item_1/text = ".75"
popup/item_1/id = 1
popup/item_2/text = "1"
popup/item_2/id = 2

[node name="ShadowModeLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Shadow Mode:"

[node name="ShadowMode" type="OptionButton" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
clip_text = true
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "Orthogonal (fast)"
popup/item_1/text = "Parallel 2 Splits (Average)"
popup/item_1/id = 1
popup/item_2/text = "Parallel 4 Splits (Slow)"
popup/item_2/id = 2

[node name="VSyncLabel" type="Label" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "VSync: "

[node name="VSync" type="OptionButton" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "Disabled"
popup/item_1/text = "Adaptive"
popup/item_1/id = 1
popup/item_2/text = "Enabled"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 8

[node name="SaveButton" type="Button" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save Changes"

[node name="RevertButton" type="Button" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revert Changes"

[node name="RestoreButton" type="Button" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset to Default"

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Keyboard Input" type="MarginContainer" parent="CenterContainer/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
metadata/_tab_index = 2

[node name="UnsavedChangesDialogWindow" type="CenterContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 710.0
offset_top = 490.0
offset_right = 1210.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackRect" type="ColorRect" parent="UnsavedChangesDialogWindow"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="WhiteRect" type="ColorRect" parent="UnsavedChangesDialogWindow"]
custom_minimum_size = Vector2(496, 96)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="UnsavedChangesDialogWindow"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UnsavedChangesDialogWindow/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UnsavedChangesDialogWindow/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="DialogLabel" type="Label" parent="UnsavedChangesDialogWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Do you want to save your changes before going back?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UnsavedChangesDialogWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 8

[node name="YesButton" type="Button" parent="UnsavedChangesDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Yes"

[node name="NoButton" type="Button" parent="UnsavedChangesDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "No"

[node name="CancelButton" type="Button" parent="UnsavedChangesDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Cancel"

[node name="RestoreDefaultDialogWindow" type="CenterContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 710.0
offset_top = 490.0
offset_right = 1210.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackRect" type="ColorRect" parent="RestoreDefaultDialogWindow"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="WhiteRect" type="ColorRect" parent="RestoreDefaultDialogWindow"]
custom_minimum_size = Vector2(595, 96)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="RestoreDefaultDialogWindow"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RestoreDefaultDialogWindow/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="RestoreDefaultDialogWindow/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="DialogLabel" type="Label" parent="RestoreDefaultDialogWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Are you sure, that you want to reset all settings to their default values?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RestoreDefaultDialogWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 8

[node name="YesButton" type="Button" parent="RestoreDefaultDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Yes"

[node name="CancelButton" type="Button" parent="RestoreDefaultDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Cancel"

[connection signal="visibility_changed" from="." to="." method="setComponentValues"]
[connection signal="text_changed" from="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/GridContainer/LineEdit" to="." method="changePlayerName"]
[connection signal="item_selected" from="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/GridContainer/OptionButton" to="." method="changePlayerFaction"]
[connection signal="pressed" from="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/HBoxContainer/BackButton" to="." method="goBackFromSettings"]
[connection signal="pressed" from="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/HBoxContainer/RevertButton" to="." method="revertChangedPlayerInfo"]
[connection signal="pressed" from="CenterContainer/PanelContainer/TabContainer/PlayerInfo/VBoxContainer/HBoxContainer/SaveButton" to="." method="saveCurrentPlayerInfo"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="selectVolume"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer/VolumeBox" to="." method="selectVolume"]
[connection signal="item_selected" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer/AA" to="." method="selectAntiAliasing"]
[connection signal="toggled" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer/FPS" to="." method="selectFPS"]
[connection signal="item_selected" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer/WindowMode" to="." method="selectScreenMode"]
[connection signal="item_selected" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer/Resolution" to="." method="selectResolution"]
[connection signal="toggled" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer/ShadowOnOff" to="." method="selectShadow"]
[connection signal="item_selected" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer/ResolutionScale" to="." method="selectResolutionScale"]
[connection signal="item_selected" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer/ShadowMode" to="." method="selectShadowMode"]
[connection signal="item_selected" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/GridContainer/VSync" to="." method="selectVSync"]
[connection signal="pressed" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer3/SaveButton" to="." method="saveCurrentSettings"]
[connection signal="pressed" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer3/RevertButton" to="." method="revertChangedSettings"]
[connection signal="pressed" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer3/RestoreButton" to="." method="restoreDefaultSettings"]
[connection signal="pressed" from="CenterContainer/PanelContainer/TabContainer/Settings/ScrollContainer/VBoxContainer/HBoxContainer3/BackButton" to="." method="goBackFromSettings"]
[connection signal="pressed" from="UnsavedChangesDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="unsavedChangesDialogWindowYes"]
[connection signal="pressed" from="UnsavedChangesDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="dialogWindowNo"]
[connection signal="pressed" from="UnsavedChangesDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="dialogWindowCancel"]
[connection signal="pressed" from="RestoreDefaultDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="restoreDefaultDialogWindowYes"]
[connection signal="pressed" from="RestoreDefaultDialogWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="dialogWindowCancel"]
